# context-raii

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.schema_probe.json
benchmarks/: bench_hook_latency.py  harness.py  live_session_checklist.md  measure_session.py  replay_session.py  run_harness.py
benchmarks/scenarios/: cross_cutting_refactor.py  exploratory_abandon.py  long_chain.py  parallel_tasks.py  sequential_clean.py
hooks/: post_tool_use.py  pre_compact.py  pre_tool_use.py  schema_logger.py  session_start.py
raii/: __init__.py  compaction_advisor.py  context_tagger.py  eviction_engine.py  reference_graph.py  storage.py  task_registry.py
tests/: test_eviction_engine.py  test_reference_graph.py  test_task_registry.py
